@@ -467,3 +467,9 @@ then readIDAT() should work. Thanks to Pierre Cherel who reported this error.
 
 **   added crlmmIlluminaRS to cnrma-functions.R (testing)
 
+2010-03-18 R.Scharpf committed version 1.5.37
+
+**   fixed bugs in genotype() and crlmmIlluminaRS.
+     (currently saving intermediate steps in crlmmIlluminaRS)
+     removed cnOptions function and changed arguments to crlmmCopynumber
+
